fixed issue with overflow in event display

--- a/client/src/css/_search.scss
+++ b/client/src/css/_search.scss
@@ -28,6 +28,7 @@
     gap: 24px;
     list-style-type: none;
     padding: 0;
+    overflow: hidden;
 }
 
 .searchItem {
@@ -35,5 +36,5 @@
     flex-direction: column;
     h3, h4, p {
         margin: 0;
-    }
+    };
 }
