--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -92,6 +92,7 @@
   gap: 24px;
   list-style-type: none;
   padding: 0;
+  overflow: hidden;
 }
 
 .searchItem {
